# black_hole

./: README.md  index.html  main.py  pyproject.toml
.github/workflows/: deploy.yml
src/: main.js  style.css
src/shaders/: blackhole.frag  fullscreen.vert
